# myMarcher

./: .gitmodules  CMakeLists.txt  LICENSE  Readme.md  main.cpp
src/include/: app.cpp  app.h  camera.cpp  camera.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  window.cpp  window.h
src/libs/GLAD/include/glad/: glad.h
src/libs/GLAD/src/: glad.c
src/shaders/: marcher.fs  vertex.vs
